<resources>
    <string name="app_name">Product</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Pets</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="editorActivty_label">Add a product</string>
    <string name="empty_view_title_text">Please add a new product from "+ " button</string>
    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_failed">Insert Product Failed</string>
    <string name="editor_insert_product_successful">Insert Pet Successful</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_successful">product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="initial_quantity_value">0</string>
</resources>
